--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1048,11 +1048,12 @@ section {
 # Testimonials
 --------------------------------------------------------------*/
 .testimonials {
-  padding: 80px 0;
+  padding: 60px 0;
   /* background: url("../img/testimonials-bg.jpg") no-repeat; */
   background-position: center center;
   background-size: cover;
   position: relative;
+
 }
 
 .testimonials::before {
@@ -1062,7 +1063,7 @@ section {
   right: 0;
   top: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.7);
+  background: #F3EEEA;
 }
 
 .testimonials .section-header {
@@ -1076,7 +1077,7 @@ section {
 
 .testimonials .testimonial-item {
   text-align: center;
-  color: #fff;
+  color: #444444;
 }
 
 .testimonials .testimonial-item .testimonial-img {
@@ -1090,18 +1091,19 @@ section {
   font-size: 20px;
   font-weight: bold;
   margin: 10px 0 5px 0;
-  color: #fff;
+  color: #444444;
 }
 
 .testimonials .testimonial-item h4 {
   font-size: 14px;
-  color: #ddd;
+  color: #444444;
   margin: 0 0 15px 0;
+
 }
 
 .testimonials .testimonial-item .quote-icon-left,
 .testimonials .testimonial-item .quote-icon-right {
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(106, 103, 103, 0.6);
   font-size: 26px;
 }
 
@@ -1121,7 +1123,7 @@ section {
 .testimonials .testimonial-item p {
   font-style: italic;
   margin: 0 auto 15px auto;
-  color: #eee;
+  color: #020101;
 }
 
 .testimonials .swiper-pagination {
@@ -1132,7 +1134,7 @@ section {
 .testimonials .swiper-pagination .swiper-pagination-bullet {
   width: 12px;
   height: 12px;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(3, 0, 0, 0.4);
   opacity: 0.5;
 }
 
@@ -1740,6 +1742,24 @@ p {
   /* Adjust the width to make the logo larger */
 }
 
+.float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  right: 40px;
+  background-color: #25d366;
+  color: #FFF;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100;
+}
+
+.my-float {
+  margin-top: 16px;
+}
 
 
 
