--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1603,6 +1603,8 @@ section {
   justify-content: space-between;
   align-items: center;
   transition: background-color 0.3s ease-in-out;
+  width: 100%;
+  max-width: 400px;
 
 
 
@@ -1627,7 +1629,8 @@ section {
   font-family: "Raleway", sans-serif;
   font-weight: bold;
   text-align: center;
-  width: 150px;
+  width: 400px;
+  font-size: 25px;
 
 
 }
@@ -1761,13 +1764,18 @@ p {
   margin-top: 16px;
 }
 
+.fill-button {
+  width: 100%;
+  text-align: center;
+}
+
+#divdozap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 60px;
+
+}
 
 
-
-/* https://colorhunt.co/palette/f5f7f8f4ce14495e5745474b
-
-
-
-
-
-*/
+/* https://colorhunt.co/palette/f5f7f8f4ce14495e5745474b 
